<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/party_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/party_create"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/event_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/party_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/party_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/event_address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/party_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/party_address"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPostalAddress" />

    </LinearLayout>

    <Button
        android:id="@+id/create_party_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_party_button" 
        android:onClick="createParty"/>

</LinearLayout>